sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:13: error: ')' expected but ';' found.
               setValeur(value,j-1);
                                   ^